<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="grid_item_image_description">GridView Image</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_sort_popularity">Most Popular</string>
    <string name="action_sort_rating">Highest Rated</string>
    <string name="action_sort">Sort By</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="detail_image_view_description">Poster Image Of Movie</string>
    <string name="plot">Plot</string>
    <string name="genre">Genre</string>
    <string name="backdrop_description">Backdrop Movie Image</string>
</resources>
