<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white"
        app:showAsAction="ifRoom"
        android:title="@string/action_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item app:showAsAction="never"
                    android:id="@+id/action_sort_popularity"
                    android:title="@string/action_sort_popularity"
                    android:checked="true"/>
                <item app:showAsAction="never"
                    android:id="@+id/action_sort_rating"
                    android:title="@string/action_sort_rating" />
            </group>
        </menu>
    </item>
</menu>