<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/nested_scrollview_margin"
    android:layout_marginRight="@dimen/nested_scrollview_margin"
    android:orientation="vertical"
    tools:context="com.akshitjain.popularmovies.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_poster"
                    android:layout_width="@dimen/detail_poster_width"
                    android:layout_height="@dimen/detail_poster_height"
                    android:layout_margin="@dimen/detail_poster_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/detail_image_view_description"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_linear_layout_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:layout_marginTop="@dimen/detail_text_view_heading_margin"
                        android:text="@string/release_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingLeft="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/detailNormalText"
                        android:textSize="@dimen/detail_text_view_normal_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:text="@string/user_rating"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingLeft="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/detailNormalText"
                        android:textSize="@dimen/detail_text_view_normal_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:text="@string/genre"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingLeft="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/detailNormalText"
                        android:textSize="@dimen/detail_genre_normal_text_size" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginLeft="@dimen/card_view_margin"
            android:layout_marginRight="@dimen/card_view_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_plot_heading_margin"
                    android:text="@string/plot"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/detail_text_view_heading_text_size" />

                <TextView
                    android:id="@+id/overview_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/detail_text_view_normal_padding"
                    android:textColor="@color/detailNormalText"
                    android:textSize="@dimen/detail_text_view_normal_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
